# porthole

./: CMakeLists.txt
assets/shaders/: billboard.frag  billboard.vert  sphere.frag  sphere.vert  wall.vert
src/: CMakeLists.txt  main.cpp
src/detection/: face_detector.cpp  face_detector.h
src/display/: application.h  porthole.cpp  porthole.h  view.cpp  view.h
src/geometry/: icosohedron.h  mesh.cpp  mesh.h
src/misc/: camera.h  shader.h
src/scene/: billboard.h
